# adventofcode

./: .gitignore  README.md
2022/day_1/cpp/: Makefile
2022/day_1/js/: main.js
2022/day_11/: settings.gradle.kts
2022/day_12_cpp/: Matrix.h  SDLWindow.cpp  Utils.h
2022/day_13/: main.py
2022/day_14/: jest.config.js  package-lock.json  tsconfig.json
2022/day_14/tests/: parsing.test.ts
2022/day_3/: settings.gradle.kts
2022/day_4/: settings.gradle.kts
2022/day_6/: settings.gradle.kts
2023/1/: main.go
2023/10/: package-lock.json  package.json  tsconfig.json
2023/10/src/: graph.ts  main.ts  map.ts  point.ts
2023/2/: Cargo.toml  main.rs
2023/3/: coords.php  game.php  main.php
2023/4/: Card.java  Main.java
2023/5/: main.js  mapping.js  package.json
2023/6/: main.c
2023/7/: classifiers.cpp  classifiers.h  main.cpp  test.cpp  utils.h
2023/8/: 8.sln  Drection.cs  GameMap.cs  Node.cs  Period.cs  Program.cs  Utils.cs
2023/8/Properties/: launchSettings.json
2023/9/: main.py  pyramid.py
day_1/cpp/: main.cpp
day_1/js/: main.js
day_10/: settings.gradle.kts
day_12_cpp/: .gitignore  BitmapWriter.h  CMakeLists.txt  GraphNode.h  Makefile  Matrix.h  SDLWindow.cpp  SDLWindow.h  input.txt  main.cpp
day_13/: tests.py
day_14/: package.json  webpack.config.js
day_14/public/js/: coord-set.js  (+2 more)
day_14/src/: gestures.ts  index.ejs  index.ts  types.d.ts
day_15/: settings.gradle.kts
day_2/: main.cpp
day_5/: settings.gradle.kts
day_7/: .gitignore  settings.gradle.kts
day_8/: settings.gradle.kts
day_9/: settings.gradle.kts  test.txt
(+53 files in other folders)
